[package]
name = "erc20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio="1.21.0"
web3 = "0.18.0"
serde = "1.0.144"
serde_json = "1.0.85"
thousands = "0.2.0"
dotenv = "0.15.0"
futures = "0.3.24"
aws-config = "0.49.0"
aws-sdk-dynamodb = "0.19.0"
aws-smithy-http = "0.49.0"
uuid = { version = "1.1.2", features = ["v4"] }